--- a/package.json
+++ b/package.json
@@ -9,8 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.2",
+    "@react-pdf/renderer": "^3.4.4",
+    "@redux-devtools/extension": "^3.3.0",
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.3",
+    "bootstrap": "^5.3.3",
+    "cookie": "^0.6.0",
+    "crypto-js": "^4.2.0",
+    "exceljs": "^4.4.0",
+    "graphql": "^16.9.0",
+    "jsonwebtoken": "^9.0.2",
+    "midtrans-client": "^1.3.1",
+    "next": "14.2.5",
     "react": "^18",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-helmet": "^6.1.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "sweetalert2": "^11.12.3"
   }
 }
